--- a/10-组件化开发/08-组件通信-父传子（props中的驼峰标识）.html
+++ b/10-组件化开发/08-组件通信-父传子（props中的驼峰标识）.html
@@ -6,5 +6,42 @@
 </head>
 <body>
 
+<div id = "app">
+   <cpn :c-info="info"></cpn>
+</div>
+
+<template id="cpn">
+  <h2>{{cInfo}}</h2>
+</template>
+<script src="../js/vue.js"></script>
+<script>
+
+    const cpn = {
+      template: `#cpn`,
+      props:{
+        cInfo: {
+          type:Object,
+          default() {
+            return {};
+          }
+        }
+      }
+    }
+
+    const app = new Vue({
+        el:'#app',
+        data:{
+           info:{
+             name: 'why',
+             age: '18',
+             height: '188'
+           }
+        },
+      components:{
+          cpn
+      }
+    })
+</script>
+
 </body>
 </html>
