--- a/12-前端/index.html
+++ b/12-前端/index.html
@@ -6,11 +6,10 @@
 </head>
 <body>
 
-<!--
-1.x项目组长
-2.小明
-3.小红-->
 
-<script src="main.js"></script>
+<script src="aaa.js" type="module"></script>
+<script src="bbb.js" type="module"></script>
+<script src="mmm.js" type="module"></script>
+
 </body>
 </html>
